# cloudid

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.sh  config.toml  deploy.sh
.cargo/: config.toml
containers/nfs-server/: Dockerfile  entrypoint.sh
deploy/: cloudid-configmap.yaml  cloudid.yaml  stormd-config.toml
docs/: microdns-dhcp-option121-spec.md
docs/change-requests/: microdns-dhcp-debug-root-path.md
enhancements/: agent-container-host-networking.md  agent-runner-build-containers.md
scripts/: build-f43-iso.sh
src/: cache.rs  config.rs  lib.rs  main.rs  metadata_route.rs  model.rs  provision.rs  resolve.rs  routeros_nat.rs  templates.rs
src/agent/: main.rs
src/metadata/: handlers.rs  mod.rs
src/watcher/: amo.rs  bmh.rs  container.rs  mod.rs
templates/fcos/: agent-runner-install.ign.json  agent-runner.ign.json  nextnfs.ign.json  nfs-server.ign.json  runner.ign.json
templates/fedora/: f43.ks  rawhide.ks
tests/: integration_test.rs
