[package]
name = "cloudid"
version = "0.2.0"
edition = "2021"
description = "Afterburn-compatible metadata service for provisioning SSH keys and user accounts to bare metal hosts"
license = "MIT"

[features]
default = []
agent = []

[[bin]]
name = "cloudid"
path = "src/main.rs"

[[bin]]
name = "cloudid-agent"
path = "src/agent/main.rs"
required-features = ["agent"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-nats = "0.38"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
dashmap = "6"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
futures = "0.3"
url = "2"
